--- a/src/api/APIcoins.css
+++ b/src/api/APIcoins.css
@@ -2,9 +2,17 @@
   align-items: center;
 }
 .listCoins select {
+  border-radius: 5px;
   height: 40px;
-  width: 100%;
+  max-width: 600px;
   text-align: center;
   font-size: 16px;
   cursor: pointer;
+}
+@media (max-width: 415px) {
+  .listCoins select {
+    width: 200px;
+    height: 20px;
+    font-size: 14px;
+  }
 }
