--- a/src/api/APImath.css
+++ b/src/api/APImath.css
@@ -11,15 +11,34 @@
 }
 .convertionContainer {
   display: flex;
-
   justify-content: flex-start;
   align-items: start;
   gap: 5px;
 }
 .inputContainer {
   display: flex;
+  align-items: center;
   gap: 5px;
 }
 .inputContainer input {
   padding-left: 5px;
+  max-height: 18px;
+}
+@media (max-width: 705px) {
+  .convertionContainer {
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+  }
+}
+@media (max-width: 417px) {
+  .inputContainer {
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media (max-width: 417px) {
+  .inputContainer {
+    flex-direction: column;
+  }
 }
