--- a/src/api/APImath.css
+++ b/src/api/APImath.css
@@ -1,4 +1,4 @@
-.container {
+.Mathcontainer {
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -10,20 +10,18 @@
   font-weight: bold;
 }
 .convertionContainer {
-  display: flex;
-  justify-content: flex-start;
-  align-items: start;
   gap: 5px;
 }
 .inputContainer {
-  display: flex;
   align-items: center;
   gap: 5px;
 }
 .inputContainer input {
   padding-left: 5px;
   max-height: 18px;
+  width: 100%;
 }
+
 @media (max-width: 705px) {
   .convertionContainer {
     flex-direction: column;
@@ -31,6 +29,7 @@
     gap: 8px;
   }
 }
+
 @media (max-width: 417px) {
   .inputContainer {
     justify-content: center;
