--- a/src/api/APIcoins.css
+++ b/src/api/APIcoins.css
@@ -26,8 +26,6 @@
   height: 100%;
   width: 100%;
   list-style-type: none;
-  background-color: #424242;
-  border: 1px solid #424242;
 }
 .list li {
   cursor: pointer;
@@ -35,5 +33,5 @@
   padding-bottom: 3px;
 }
 .list li:hover {
-  background-color: #242424;
+  background-color: #4f4f4f;
 }
