--- a/src/api/APIcoins.css
+++ b/src/api/APIcoins.css
@@ -4,6 +4,18 @@
   justify-content: center;
   align-items: center;
 }
+.names {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  width: 100%;
+}
+.clean {
+  display: flex;
+  font-size: 20px;
+  cursor: pointer;
+}
 .coinName {
   width: 100%;
   max-width: 300px;
