--- a/src/utils/CurrencyConverter.css
+++ b/src/utils/CurrencyConverter.css
@@ -3,10 +3,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 15px;
 }
 .price {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.price-text {
   font-weight: bold;
+}
+.price-lastUpdade {
+  font-size: 14px;
 }
 .conversion {
   display: flex;
