--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,10 @@
-.header_description {
+.header-description {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.header-text {
+  text-align: center;
+  padding: 0 10px;
 }
